added logic for authentication
